// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: inline-block;
}

.c2 {
  margin: 0;
  color: #070707;
  font-size: 1rem;
  font-weight: normal;
  color: #38A9DB;
  -webkit-transition: 0.2s ease-in-out all;
  transition: 0.2s ease-in-out all;
}

.c2:hover {
  cursor: pointer;
  color: #228ebe;
}

.c3 {
  position: relative;
  width: 24px;
  height: 24px;
}

.c4 {
  position: absolute;
  top: -2px;
}

.c5 {
  position: absolute;
  top: 4px;
}

<div
  className="c0"
>
  <div
    className="c1"
    direction="row"
  >
    <p
      className="c2"
      onClick={[Function]}
    />
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <div
          className=""
        >
          <svg
            fill="#808080"
            height="24px"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M7 14l5-5 5 5z"
            />
          </svg>
        </div>
      </div>
      <div
        className="c5"
      >
        <div
          className=""
        >
          <svg
            fill="#808080"
            height="24px"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly with optional props 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: inline-block;
}

.c2 {
  margin: 0;
  color: #070707;
  font-size: 1rem;
  font-weight: normal;
  color: #38A9DB;
  -webkit-transition: 0.2s ease-in-out all;
  transition: 0.2s ease-in-out all;
}

.c2:hover {
  cursor: pointer;
  color: #228ebe;
}

.c3 {
  position: relative;
  width: 24px;
  height: 24px;
}

.c4 {
  position: absolute;
  top: -2px;
}

.c5 {
  position: absolute;
  top: 4px;
}

<div
  className="c0"
>
  <div
    className="c1"
    direction="row"
  >
    <p
      className="c2"
      onClick={[Function]}
    >
      Button Label
    </p>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <div
          className=""
        >
          <svg
            fill="#000"
            height="24px"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M7 14l5-5 5 5z"
            />
          </svg>
        </div>
      </div>
      <div
        className="c5"
      >
        <div
          className=""
        >
          <svg
            fill="#808080"
            height="24px"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
